@@ -1,8 +1,8 @@
 #! /bin/sh
 
 # libtool - Provide generalized library-building support services.
-# Generated automatically by config.status (fastbit) ibis1.2.5.1
-# Libtool was configured on host bit-2.local:
+# Generated automatically by config.status (fastbit) ibis1.2.5.2
+# Libtool was configured on host bit.lbl.gov:
 # NOTE: Changes made to this file will be lost: look at ltmain.sh.
 #
 #   Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001, 2003, 2004, 2005,
